--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Gwen Le Portfolio <br />
 						</h1>
-						<p>Business/ Data Analyst skilled in SQL, Python, Tableau <a href="https://www.linkedin.com/in/gwen-le-4764361ab/">@GwenLe</a> </a>.</p>
+						<p>Business Analyst skilled in SQL, Python, Javascript, React  <a href="https://www.linkedin.com/in/gwen-le-4764361ab/">@GwenLe</a> </a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -104,7 +104,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Gwen2310/PortfolioProjects/blob/main/Python_German_Credit.ipynb" class="image fit"><img src="images/credit risk.jpeg" alt="" /></a>
-									<p>In this project we use Python to clean, transform, visualize and predict credit risk in the German credit dataset.</p>
+									<p>This project uses Python to clean, transform, visualize and predict credit risk in the German credit dataset.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Gwen2310/PortfolioProjects/blob/main/Python_German_Credit.ipynb" class="button">View Project</a></li>
 									</ul>
@@ -117,7 +117,7 @@
 									</header>
 									<a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/BlackJack%20Game" 
 									class="image fit"><img src="images/blackjack.png" alt="" /></a>
-									<p> In this project we build simple Blackjack game using Javascript, HTML, CSS.
+									<p> This project aims to build simple Blackjack game using Javascript, HTML, CSS.
 										</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/BlackJack%20Game" class="button">View Project</a></li>
@@ -132,7 +132,7 @@
 
 									<a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/Chrome%20extension%20app" 
 									class="image fit"><img src="images/chrome.png" alt="" /></a>
-									<p> In this project we build a Chrome extension for leads tracking using Javascript, HTML, CSS.
+									<p> This project aims to build a Chrome extension for leads tracking using Javascript, HTML, CSS.
 										</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/Chrome%20extension%20app" class="button">View Project</a></li>
@@ -146,17 +146,10 @@
 									</header>
 									<a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/My%20Emotion" 
 									class="image fit"><img src="images/Emoji.png" alt="" /></a>
-									<p> In this project we build an app to show my personality through emoji using Javascript, HTML, CSS.
+									<p> This project aims to build an app to show my personality through emoji using Javascript, HTML, CSS.
 										</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/My%20Emotion" class="button">View Project</a></li>
-
-									<a href="https://github.com/Gwen2310/PortfolioProjects/blob/main/COVID%20Project%20-%20Data%20Exploration%20with%20SQLite" 
-									class="image fit"><img src="" alt="" /></a>
-									<p> In this project we build a Chrome extension using Javascript, HTML, CSS.
-										</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/Gwen2310/PortfolioProjects/blob/main/COVID%20Project%20-%20Data%20Exploration%20with%20SQLite" class="button">View Project</a></li>
 
 									</ul>
 								</article>
