--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2020</span>
+										<span class="date">April 24, 2021</span>
 										<h2><a href="#"><br />
 							
 											Data Exploration in SQL</a></h2>
@@ -99,7 +99,7 @@
 
 								<article>
 									<header>
-										<span class="date">April 22, 2020</span>
+										<span class="date">April 22, 2021</span>
 										<h2><a href="#">Predict credit risk in German Loan dataset in Python<br />
 										</a></h2>
 									</header>
@@ -112,7 +112,7 @@
 
 								<article>
 									<header>
-								<span class="date">July 20, 2020</span>
+								<span class="date">July 20, 2021</span>
 										<h2><a href="#"><br /> Blackjack Game</a></h2>	
 									</header>
 									<a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/BlackJack%20Game" 
@@ -126,7 +126,7 @@
 
 								<article>
 									<header>
-								<span class="date">July 20, 2020</span>
+								<span class="date">July 20, 2021</span>
 										<h2><a href="#"><br /> Chrome extension</a></h2>	
 									</header>
 
@@ -141,7 +141,7 @@
 
 								<article>
 									<header>
-								<span class="date">July 30, 2020</span>
+								<span class="date">July 30, 2021</span>
 										<h2><a href="#"><br /> My Emoji</a></h2>	
 									</header>
 									<a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/My%20Emotion" 
@@ -150,6 +150,20 @@
 										</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/My%20Emotion" class="button">View Project</a></li>
+
+									</ul>
+								</article>
+								<article>
+									<header>
+								<span class="date">Aug 01, 2021</span>
+										<h2><a href="#"><br /> Dice Game </a></h2>	
+									</header>
+									<a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/Dice%20Game" 
+									class="image fit"><img src="images/Dice Game.png" alt="" /></a>
+									<p> This project aims to build a Dice Game using Javascript, HTML, CSS.
+										</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/Dice%20Game" class="button">View Project</a></li>
 
 									</ul>
 								</article>
