--- a/index.html
+++ b/index.html
@@ -109,6 +109,22 @@
 										<li><a href="https://github.com/Gwen2310/PortfolioProjects/blob/main/Python_German_Credit.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
+						
+						
+								<article>
+											<header>
+										<span class="date">July 20, 2021</span>
+												<h2><a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/LoanCalcProject"><br /> Simple Loan Calculator</a></h2>	
+											</header>
+
+											<a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/LoanCalcProject" 
+											class="image fit"><img src="images/loan cal.png" alt="" /></a>
+											<p> This project aims to build a Simple Loan Calculator using Javascript, HTML, CSS.
+												</p>
+											<ul class="actions special">
+												<li><a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/LoanCalcProject" class="button">View Project</a></li>
+											</ul>
+										</article>
 
 								<article>
 									<header>
