deck of cards API

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 									</ul>
 								</article>
 						
-						<article>
+								<article>
 									<header>
 								<span class="date">July 30, 2021</span>
 										<h2><a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/PacManProject"><br /> Pacman Game </a></h2>	
@@ -197,6 +197,21 @@
 										</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/PacManProject" class="button">View Project</a></li>
+
+									</ul>
+								</article>
+						
+							<article>
+									<header>
+								<span class="date">Aug 03, 2021</span>
+										<h2><a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/Deck%20of%20Cards%20API"><br /> Deck of Cards API </a></h2>	
+									</header>
+									<a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/Deck%20of%20Cards%20API" 
+									class="image fit"><img src="images/Cards.png" alt="" /></a>
+									<p> This project aims to build a card game using Javascript API, HTML, CSS.
+										</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Gwen2310/PortfolioProjects/tree/main/Deck%20of%20Cards%20API" class="button">View Project</a></li>
 
 									</ul>
 								</article>
