--- a/index.html
+++ b/index.html
@@ -96,6 +96,24 @@
 										<li><a href="https://github.com/Gwen2310/PortfolioProjects/blob/main/COVID%20Project%20-%20Data%20Exploration%20with%20SQLite" class="button">View Project</a></li>
 									</ul>
 								</article>
+								
+								<article>
+									<header>
+										<span class="date">April 24, 2021</span>
+										<h2><a href="#"><br />
+							
+											Data Cleaning in SQL</a></h2>
+									</header>
+									<a href="https://github.com/Gwen2310/PortfolioProjects/blob/main/Nashville%20Housing%20-%20Data%20Cleaning%20with%20SQLite" 
+									class="image fit"><img src="images/housing.jpeg" alt="" /></a>
+									<p> In this project we take Nashville Housing data and perform data cleaning
+										in SQLite.
+										</p>
+									<ul class="actions special"></ul>
+										<li><a href="https://github.com/Gwen2310/PortfolioProjects/blob/main/Nashville%20Housing%20-%20Data%20Cleaning%20with%20SQLite" class="button">View Project</a></li>
+									</ul>
+								</article>
+
 
 								<article>
 									<header>
