--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 											Data Cleaning in SQL</a></h2>
 									</header>
 									<a href="https://github.com/Gwen2310/PortfolioProjects/blob/main/Nashville%20Housing%20-%20Data%20Cleaning%20with%20SQLite" 
-									class="image fit"><img src="images/housing.jpeg" alt="" /></a>
+									class="image fit"><img src="images/housing.jpg" alt="" /></a>
 									<p> In this project we take Nashville Housing data and perform data cleaning
 										in SQLite.
 										</p>
