--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Gwen Le Portfolio <br />
+						<h1>Gwen Tomas Portfolio <br />
 						</h1>
-						<p>Business Analyst skilled in Javascript, SQL, Python  <a href="https://www.linkedin.com/in/gwen-le-4764361ab/">@GwenLe</a> </a>.</p>
+						<p>Business Analyst skilled in Javascript, SQL, Python  <a href="https://www.linkedin.com/in/gwenle23/">@GwenTomas</a> </a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
