--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Gwen Tomas Portfolio <br />
 						</h1>
-						<p>Data Business Analyst skilled in SQL, Python, Javascript, Java  <a href="https://www.linkedin.com/in/gwenle23/">@GwenTomas</a> </a>.</p>
+						<p>Data Business Analyst skilled in SQL, Python, Javascript  <a href="https://www.linkedin.com/in/gwenle23/">@GwenTomas</a> </a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
